Fixed alignment

--- a/public/index.css
+++ b/public/index.css
@@ -1,26 +1,32 @@
-body {
-    display: flex;
-    flex-direction: column;
-}
-
-#image-feature-container{
-    position: absolute;
-    align-self: flex-start;
-    top: 15%;
-    left: 10%;
-    /*left: 300px;*/
-    /*bottom: 10px;*/
-    /*background-color: green;*/
-}
-
-#product-info-container{
-    padding-bottom : 400px;
+.product-info-column-one {
+    padding-bottom: 275px;
 }
 
 #pi-container {
     position: relative;
-    display: flex;
-    justify-content: center;
-    max-width: 1600px;
+    width: 1600px;
 }
+
+#image-feature-container{
+    /*background-color: red;*/
+    display: block;
+    position: absolute;
+    top: 170px;
+    left: 100px;
+}
+
+
+
+
+@media (min-width: 1600px) {
+    #pi-container {
+        width: 1600px;
+        margin: auto;
+    }
+    /*#carousel-container {*/
+    /*    margin: auto;*/
+    /*    width: 1600px !important;*/
+    /*}*/
+}
+
 
